# rust-kdb

./: Cargo.toml  LICENSE  README.md  TODO.md  build.rs
embedded_examples/: README.md
embedded_examples/embedded_1/: Cargo.toml  README.md
embedded_examples/embedded_1/src/: lib.rs  load.q
embedded_examples/pipe_select_poll/: Cargo.toml  README.md
embedded_examples/pipe_select_poll/src/: lib.rs  load.q
embedded_examples/so_utils/: Cargo.toml  README.md  build.rs
embedded_examples/so_utils/src/: lib.rs  load.q
examples/: connecting_to_kdb.rs  creating_a_list.rs  fun_with_symbols.rs  publishing.rs  using_any.rs  using_atoms.rs  using_dictionaries.rs  working_with_time.rs
examples/embedded_1/: Cargo.toml
examples/embedded_1/src/: lib.rs  q_lib_exec.rs
src/: any.rs  atom.rs  atoms.rs  callbacks.rs  connection.rs  date_time_types.rs  dict.rs  dictionary.rs  error.rs  guid.rs  k.rs  k_error.rs  k_type.rs  kapi.rs  kbox.rs  lib.rs  list.rs  lists.rs  mixed_list.rs  serialization.rs  symbol.rs  table.rs  type_traits.rs  unowned.rs
src/raw/: kapi.rs  mod.rs  types.rs
