[package]
name = "kdb"
version = "0.2.1"
authors = ["Fifth Row Technologies"]
edition = "2018"
description = "Idiomatic, High performance API for using KDB+ and Q from Rust"
readme = "README.md"
license = "MIT"
keywords = ["kdb", "q"]
categories = ["api-bindings", "database"]
repository = "https://github.com/Fifthrow/rust-kdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", optional = true }
thiserror="1"
array_iterator="1.3"

[features]
default = ["uuid"]
embedded = []